--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "nodejs",
+  "name": "ayoub-gen",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6"
+    "express": "^4.18.2"
   }
 }
